# chopsticks

./: .readthedocs.yaml  CONTRIBUTING.md  DESIGN.md  ERROR_HANDLING.md  FRAMEWORK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  METRICS_DESIGN.md  METRICS_IPC_SUMMARY.md  README.md  TEST_RUN_SUMMARY.md  pyproject.toml
.github/workflows/: README.md  docs-build.yml  docs-checks.yml  docs-publish.yml  docs-status.yml  functional-tests.yml
charm/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
charm/src/: charm.py
config/: s3_config.yaml.example  s3_config_with_metrics.yaml  scenario_config_default.yaml  scenario_config_test.yaml
docs/: .custom_wordlist.txt  .gitignore  README.md  conf.py  index.rst  requirements.txt
docs/.sphinx/: get_vale_conf.py
docs/explanation/: architecture.rst  error-handling.rst  index.rst  metrics-architecture.rst  scenarios.rst
docs/how-to/: collect-metrics.rst  create-scenario.rst  customize-driver.rst  distributed-testing.rst  index.rst
docs/reference/: cli.rst  configuration.rst  driver-api.rst  index.rst  metrics-schema.rst  workload-api.rst
docs/reuse/: links.txt
docs/tutorial/: first-test.rst  index.rst  installation.rst  understanding-results.rst
scripts/: add_license_headers.py  install_s5cmd.sh  run-functional-test.sh
src/chopsticks/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_license.py
tests/integration/: __init__.py  test_daemon_cleanup.py  test_error_reporting.py  test_metrics_ipc.py
tests/scenarios/: __init__.py  test_download_error_handling.py
tests/unit/: __init__.py  test_cli.py  (+5 more)
(+25 files in other folders)
